2007-02-17  Tim-Philipp Muller <t.i.m@zen.co.uk>

	reviewed by: Ronald S. Bultje <rbultje@gnome.org>

	* ext/pitfdll/dshow_vdec.c: (dshow_videodec_sink_setcaps):
	  Don't use a var after g_free()ing it (#1517002).

2007-01-31  Julien MOUTTE  <julien@moutte.net>

	* ext/pitfdll/dmo_venc.c: (dmo_videoenc_sink_setcaps),
	(dmo_videoenc_chain): Some more fixes.

2007-01-31  Julien MOUTTE  <julien@moutte.net>

	* ext/pitfdll/dmo_venc.c: (dmo_videoenc_sink_setcaps),
	(dmo_videoenc_chain): Port debug messages and errors
	to 0.10.

2007-01-30  Julien MOUTTE  <julien@moutte.net>

	* gst-libs/ext/loader/dmo/DMO_VideoEncoder.c:
	(DMO_VideoEncoder_Open): Fix average time per frame 
	calculation.
	* gst-libs/ext/loader/dmo/Makefile.am: Use gst_util
	functions.

2006-08-21  Julien MOUTTE  <julien@moutte.net>

	* ext/pitfdll/dmo_venc.c: We want I420, nothing else
	for now.

2006-05-15  Wim Taymans  <wim@fluendo.com>

      * ext/pitfdll/dmo_adec.c: (dmo_audiodec_change_state):
      * ext/pitfdll/dmo_aenc.c: (dmo_audioenc_change_state),
      (dmo_audioenc_sink_event):
      * ext/pitfdll/dmo_vdec.c: (dmo_videodec_change_state):
      * ext/pitfdll/dmo_venc.c: (dmo_videoenc_change_state),
      (dmo_videoenc_sink_event):
      * ext/pitfdll/dshow_vdec.c: (dshow_videodec_change_state),
      (dshow_videodec_sink_event):
      * ext/pitfdll/qt_adec.c: (qt_audiodec_sink_setcaps),
      (qt_audiodec_chain), (qt_audiodec_change_state),
      (qt_audiodec_sink_event):
      Fix state changes.
      Pass on flush event in qt audio decoder.
      Use right function to get contents f codec_data in qt
      audio.

2006-04-21  Julien MOUTTE  <julien@moutte.net>

	Patch by: Jens Granseuer <jensgr@gmx.net>

	* configure.ac:
	* ext/pitfdll/Makefile.am: Add --with-dlldir to configure.

2006-04-05  Julien MOUTTE  <julien@moutte.net>

	Patch by: Fabrizio Gennari <fabrizio.ge@tiscali.it>

	* .cvsignore:
	* ext/.cvsignore:
	* ext/pitfdll/.cvsignore:
	* ext/pitfdll/dshow_vdec.c: